Добавлено сохранение в БД загрузок с привязкой к метаданным трека и пользователю